{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 70,
  "lineage": "e11194d8-5d02-54ea-0805-d68ecb2e9bbf",
  "resources": [
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0612eb45b207ea279",
            "arn": "arn:aws:ec2:us-east-1:842676002265:elastic-ip/eipalloc-0612eb45b207ea279",
            "domain": "vpc",
            "id": "eipalloc-0612eb45b207ea279",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "public_dns": "ec2-52-6-103-18.compute-1.amazonaws.com",
            "public_ip": "52.6.103.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Rabiesevin-prod-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "Rabiesevin-prod-vpc-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842676002265:internet-gateway/igw-02b3a5d985503d2d7",
            "id": "igw-02b3a5d985503d2d7",
            "owner_id": "842676002265",
            "tags": {
              "Name": "Rabiesevin-prod-vpc-igw"
            },
            "tags_all": {
              "Name": "Rabiesevin-prod-vpc-igw"
            },
            "vpc_id": "vpc-0a43b02f501bccef4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-077bcbe922b1070c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0231a83711e7a974e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077bcbe922b1070c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b3a5d985503d2d7",
            "id": "r-rtb-0fcb64dd4a166e5e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcb64dd4a166e5e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842676002265:route-table/rtb-077bcbe922b1070c5",
            "id": "rtb-077bcbe922b1070c5",
            "owner_id": "842676002265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0231a83711e7a974e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rabiesevin-prod-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "Rabiesevin-prod-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43b02f501bccef4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842676002265:route-table/rtb-0fcb64dd4a166e5e2",
            "id": "rtb-0fcb64dd4a166e5e2",
            "owner_id": "842676002265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b3a5d985503d2d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rabiesevin-prod-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "Rabiesevin-prod-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43b02f501bccef4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:842676002265:vpc/vpc-0a43b02f501bccef4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043de6821f2d55342",
            "default_route_table_id": "rtb-089f52615ebd63fe1",
            "default_security_group_id": "sg-080384c2ccac266dd",
            "dhcp_options_id": "dopt-0a1755b981ca50909",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a43b02f501bccef4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089f52615ebd63fe1",
            "owner_id": "842676002265",
            "tags": {
              "Name": "Rabiesevin-prod-vpc"
            },
            "tags_all": {
              "Name": "Rabiesevin-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}